--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -9,10 +9,10 @@ order: 1
         <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator</a>
     </div>
     <div class="card-header d-flex justify-content-between">
-        <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
+        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator</a>
     </div>
     <div class="card-header d-flex justify-content-between">
-        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (Beta)</a>
+        <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
     </div>
 </div>
 
