Added ads to bottom of MIG and NPCG about sections.

--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -161,3 +161,5 @@ title: Random NPC Generator
         you the ability to generate more specific NPCs.
     </p>
 </div>
+
+{% include ads-horizontal-long.html %}
